--- a/bloglist/package.json
+++ b/bloglist/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "proxy": "http://localhost:3001",
   "author": "",
@@ -18,6 +19,11 @@
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
+    "eslint": "^7.12.1",
+    "jest": "^26.6.1",
     "nodemon": "^2.0.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
